--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Qt gitignore
+# {
 # C++ objects and libs
 *.slo
 *.lo
@@ -52,3 +54,20 @@ compile_commands.json
 *creator.user*
 
 *_qmlcache.qrc
+# }
+
+# vscode gitignore
+# {
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+# }
